# transforms84

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  codecov.yml  distances.c  helpers.c  pyproject.toml  setup.py  transforms.c  transforms84.h
.github/workflows/: codecov.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  wheels.yml  workflow.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/reference/: index.rst
docs/source/user/: examples.rst  index.rst  installation.rst  operations.rst
examples/: example1.ipynb  example2.ipynb
include/: definitions.h  distances.c  general.c  general.h  helpers.c  transforms.c
src/transforms84/: __init__.py  definitions.py  distances.pyi  geodetic_systems.py  helpers.pyi  systems.py  transforms.pyi
tests/: conftest.py  test.c  test_AER2ENU.py  test_AER2NED.py  test_AER_bounds.py  test_ECEF2ENU.py  test_ECEF2ENUv.py  test_ECEF2NED.py  test_ECEF2NEDv.py  test_ECEF2geodetic.py  test_ENU2AER.py  test_ENU2ECEF.py  test_ENU2ECEFv.py  test_NED2AER.py  test_NED2ECEF.py  test_NED2ECEFv.py  test_UTM2geodetic.py  test_WGS.py  test_definitions.py  test_distances.py  test_geodetic2ECEF.py  test_geodetic2UTM.py  test_helpers.py  test_readme.py  test_systems.py
